# bedrock-rs

./: .gitignore  Cargo.toml
crates/level/: Cargo.toml
crates/level/src/level/: chunk.rs  file_interface.rs  level.rs  sub_chunk.rs
crates/level/src/level/db_interface/: bedrock_key.rs  rusty.rs
crates/level/test_level/: LOG
crates/level/test_level/db/: 000044.ldb  LOG.old  MANIFEST-000041
crates/level/tests/: api_test.rs
crates/proto/: Cargo.toml  _build.rs  build.rs
crates/proto/src/: codec.rs  encryption.rs  info.rs  lib.rs  listener.rs
crates/proto/src/adapter/: mod.rs
crates/proto/src/adapter/events/: emote.rs  mod.rs
crates/proto/src/connection/: mod.rs
crates/proto/src/connection/shard/: arc.rs  task.rs
crates/proto/src/transport/: connection.rs
crates/proto/src/version/: mod.rs
crates/proto/src/version/v662/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v662/enums/: abilities_index.rs  actor_damage_cause.rs  actor_data_ids.rs  actor_event.rs  actor_flags.rs  actor_link_type.rs  actor_type.rs  animation_mode.rs  book_edit_action.rs  boss_event_update_type.rs  build_platform.rs  camera_shake_action.rs  code_builder_storage.rs  command_block_mode.rs  command_parameter_option.rs  container_enum_name.rs  crafting_data_entry_type.rs  crafting_type.rs  editor_world_type.rs  enchant_type.rs  game_type.rs  hud_element.rs  hud_visibility.rs  identity_definition_type.rs  input_mode.rs  lesson_action.rs  (+30 more)
crates/proto/src/version/v671/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v685/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v686/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v712/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v729/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v748/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v766/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v776/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v786/: gamepackets.rs  helper.rs  info.rs  mod.rs
(+327 files in other folders)
