[package]
name = "bedrockrs_level"
version = "0.1.0"
edition = "2021"

[dependencies]
bedrockrs_shared = { path = "../shared" }

nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }


thiserror = "1"
byteorder = "1"
uuid = { version = "1", features = ["v4"] }
bytemuck = { version = "1", features = ["must_cast"] }
len-trait = "0.6"
concat-idents = "1"
serde = "1"
rusty-leveldb = "3"
miniz_oxide = "0"

vek = "0.17"

[dev-dependencies]
rand = "0.8"

[features]
default-impl = []

[[test]]
name = "api_test"


[features]
default-impl = []
default = ["default-impl"]

