[package]
name = "bedrockrs_level"
version = "0.1.0"
edition = "2021"

[dependencies]
bedrockrs_shared = { path = "../shared" }

nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }


thiserror = "2.0"
byteorder = "1.5"
uuid = { version = "1.11", features = ["v4"] }
bytemuck = { version = "1.19", features = ["must_cast"] }
serde = "1.0"
rusty-leveldb = "3.0"
miniz_oxide = "0.8"
vek = "0.17"

[dev-dependencies]
rand = "0.9"
copy_dir = "0.1.3"


[[test]]
name = "api_test"


[features]
default-impl = []
default = ["default-impl"]

