[package]
name = "bedrockrs_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
bedrockrs_shared = { path = "../shared" }
bedrockrs_proto_core = { path = "../proto_core" }
bedrockrs_macros = { path = "../macros" }
bedrockrs_addon = { path = "../addon" }

nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }
xuid = "1.0"

byteorder = "1.5"
varint-rs = "2.2"

log = "0.4"
vek = "0.17"
thiserror = "2.0"

jsonwebtoken = "9.3"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
p384 = "0.13.0"
sha2 = "0.10.8"
aes = "0.8.4"
ctr = "0.9.2"

flate2 = "1.0"
snap = "1.1"

bitflags = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.19"

rak-rs = { version = "0.3", default-features = false, features = ["async_tokio", "mcpe"] }
